--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://4JNxDybbuk.github.io/CI-CD-react-project-with-github-action",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
